fix: default to show every object so that users see the potential

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,23 +14,23 @@ startpunkt:
 
   # Kubernetes integration, read ingress resources
   ingress:
-    enabled: false  # If true, enable the reading of ingress resources
-    onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+    enabled: true  # If true, enable the reading of ingress resources
+    onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
 
   # OpenShift integration, read OpenShift Routes
   openshift:
-    enabled: false  # If true, enable the reading of OpenShift Route resources
-    onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+    enabled: true  # If true, enable the reading of OpenShift Route resources
+    onlyAnnotated: trfalseue  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
 
   # Hajimari integration, read Hajimari Applications and Bookmarks
   hajimari:
-    enabled: false  # If true, enable the reading of Hajimari Applications and Bookmarks
+    enabled: true  # If true, enable the reading of Hajimari Applications and Bookmarks
 
   # Istio Virtual Service integration, read Istio VirtualService resources
   istio:
     virtualservice:
-      enabled: false  # If true, enable the reading of Hajimari Applications and Bookmarks
-      onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+      enabled: true  # If true, enable the reading of Hajimari Applications and Bookmarks
+      onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
 
   # Web ui configuration
   web:
