--- a/.github/workflows/release-notes.yml
+++ b/.github/workflows/release-notes.yml
@@ -1,4 +1,3 @@
----
 name: 🚀 Milestone Closure
 
 on:
@@ -10,6 +9,8 @@ on:
         description: 'Milestone ID'
         required: true
         default: '1'
+
+permissions: read-all
 
 jobs:
   create-release-notes:
