--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -47,7 +47,7 @@ jobs:
 
             echo "run=${{
               (github.repository == 'ullbergm/startpunkt' && (github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags/v')) &&
-              (github.event_name == 'push' || (github.event_name == 'workflow_run' && github.event.workflow_run.event == 'push' && github.event.workflow_run.conclusion == 'success'))
+              (github.event_name == 'push' || (github.event_name == 'workflow_run' && (github.event.workflow_run.event == 'push' || github.event.workflow_run.event == 'workflow_dispatch') && github.event.workflow_run.conclusion == 'success'))
             }}" >>$GITHUB_OUTPUT
 
   build-jvm-images:
