ci: fix concurrency

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -35,7 +35,7 @@ on:
 
 concurrency:
   group: workflow = ${{ github.workflow }}, ref = ${{ github.event.ref }}, pr = ${{github.event.pull_request.id }}
-  cancel-in-progress: "${{ github.event_name == 'pull_request' }}"
+  cancel-in-progress: true
 
 jobs:
   simple-build-test:
