feat: add swagger-ui at runtime

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ quarkus.container-image.tag=latest
 quarkus.http.test-timeout=60s
 
 quarkus.native.resources.includes=i8n/*.json
+quarkus.swagger-ui.always-include=true
