--- a/deploy/openshift/startpunkt-jvm.yaml
+++ b/deploy/openshift/startpunkt-jvm.yaml
@@ -178,7 +178,7 @@ metadata:
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/part-of: startpunkt
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: latest-jvm
   name: startpunkt-role
   namespace: default
 rules:
@@ -210,7 +210,7 @@ metadata:
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/part-of: startpunkt
-    app.kubernetes.io/version: latest
+    app.kubernetes.io/version: latest-jvm
   name: startpunkt-cluster-role-binding
   namespace: default
 roleRef:
@@ -320,7 +320,7 @@ spec:
         - env:
             - name: SMALLRYE_CONFIG_LOCATIONS
               value: /mnt/app-config-map
-          image: ghcr.io/ullbergm/startpunkt:latest
+          image: ghcr.io/ullbergm/startpunkt:latest-jvm
           imagePullPolicy: IfNotPresent
           livenessProbe:
             failureThreshold: 3
