--- a/deploy/kubernetes/startpunkt-jvm.yaml
+++ b/deploy/kubernetes/startpunkt-jvm.yaml
@@ -4,7 +4,7 @@ kind: ServiceAccount
 metadata:
   annotations:
     app.quarkus.io/quarkus-version: 3.12.3
-    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt-ci-test.git
+    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt.git
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/part-of: startpunkt
@@ -16,9 +16,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   annotations:
-    app.openshift.io/vcs-uri: https://github.com/ullbergm/startpunkt-ci-test
+    app.openshift.io/vcs-uri: https://github.com/ullbergm/startpunkt
     app.quarkus.io/quarkus-version: 3.12.3
-    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt-ci-test.git
+    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt.git
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/part-of: startpunkt
@@ -225,7 +225,7 @@ kind: RoleBinding
 metadata:
   annotations:
     app.quarkus.io/quarkus-version: 3.12.3
-    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt-ci-test.git
+    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt.git
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/part-of: startpunkt
@@ -246,7 +246,7 @@ kind: Service
 metadata:
   annotations:
     app.quarkus.io/quarkus-version: 3.12.3
-    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt-ci-test.git
+    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt.git
     prometheus.io/scrape: 'true'
     prometheus.io/path: /q/metrics
     prometheus.io/port: '8080'
@@ -273,7 +273,7 @@ kind: Deployment
 metadata:
   annotations:
     app.quarkus.io/quarkus-version: 3.12.3
-    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt-ci-test.git
+    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt.git
     prometheus.io/scrape: 'true'
     prometheus.io/path: /q/metrics
     prometheus.io/port: '8080'
@@ -295,7 +295,7 @@ spec:
       annotations:
         alpha.image.policy.openshift.io/resolve-names: '*'
         app.quarkus.io/quarkus-version: 3.12.3
-        app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt-ci-test.git
+        app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt.git
         prometheus.io/scrape: 'true'
         prometheus.io/path: /q/metrics
         prometheus.io/port: '8080'
@@ -372,7 +372,7 @@ kind: Ingress
 metadata:
   annotations:
     app.quarkus.io/quarkus-version: 3.12.3
-    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt-ci-test.git
+    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt.git
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/part-of: startpunkt
@@ -396,7 +396,7 @@ kind: ServiceMonitor
 metadata:
   annotations:
     app.quarkus.io/quarkus-version: 3.12.3
-    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt-ci-test.git
+    app.quarkus.io/vcs-uri: https://github.com/ullbergm/startpunkt.git
   labels:
     app.kubernetes.io/name: startpunkt
     app.kubernetes.io/part-of: startpunkt
