--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
   <scm>
     <developerConnection>scm:git:https://github.com/ullbergm/startpunkt.git</developerConnection>
-    <tag>v0.9.5</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
