--- a/.github/workflows/clean-up-ghcr.yml
+++ b/.github/workflows/clean-up-ghcr.yml
@@ -22,4 +22,6 @@ jobs:
         with:
           delete-untagged: true
           validate: true
+          dry-run: true
+          keep-n-untagged: 0
           token: ${{ secrets.GITHUB_TOKEN }}
