--- a/.github/workflows/clean-up-ghcr.yml
+++ b/.github/workflows/clean-up-ghcr.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           delete-untagged: true
           validate: true
-          dry-run: true
+          dry-run: false
           keep-n-untagged: 0
           keep-n-tagged: 11
           token: ${{ secrets.GITHUB_TOKEN }}
