--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>us.ullberg</groupId>
   <artifactId>startpunkt</artifactId>
-  <version>1.0.1</version>
+  <version>1.1.0-SNAPSHOT</version>
 
   <scm>
     <developerConnection>scm:git:https://github.com/ullbergm/startpunkt.git</developerConnection>
-    <tag>v1.0.1</tag>
+    <tag>v0.9.7</tag>
   </scm>
 
   <properties>
