--- a/pom.xml
+++ b/pom.xml
@@ -241,7 +241,7 @@
       <plugin>
         <groupId>io.fabric8</groupId>
         <artifactId>crd-generator-maven-plugin</artifactId>
-        <version>${fabric8.kubernetes-client.version}</version>
+        <version>7.3.1</version>
         <executions>
           <execution>
             <goals>
