disable open telemetry

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ quarkus.http.test-timeout=60s
 
 quarkus.native.resources.includes=i8n/*.json
 quarkus.swagger-ui.always-include=true
+
+quarkus.opentelemetry.enabled=false
