--- a/deploy/openshift/startpunkt-native.yaml
+++ b/deploy/openshift/startpunkt-native.yaml
@@ -47,12 +47,12 @@ data:
       # Kubernetes integration, read ingress resources
       ingress:
         enabled: true  # If true, enable the reading of ingress resources
-        onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+        onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
 
       # OpenShift integration, read OpenShift Routes
       openshift:
         enabled: true  # If true, enable the reading of OpenShift Route resources
-        onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+        onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
 
       # Hajimari integration, read Hajimari Applications and Bookmarks
       hajimari:
@@ -62,13 +62,13 @@ data:
       istio:
         virtualservice:
           enabled: true  # If true, enable the reading of Hajimari Applications and Bookmarks
-          onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+          onlyAnnotated: false  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
 
       # GatewayAPI HTTPRoute integration, read GatewayAPI HTTPRoute resources
       gatewayapi:
         httproute:
           enabled: false  # If true, enable the reading of Hajimari Applications and Bookmarks
-          onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enabled: "true"'
+          onlyAnnotated: true  # Only consider resources with the annotation 'startpunkt.ullberg.us/enable: "true"'
 
       # Web ui configuration
       web:
