--- a/deploy/kubernetes/charts/startpunkt/templates/rolebinding.yaml
+++ b/deploy/kubernetes/charts/startpunkt/templates/rolebinding.yaml
@@ -24,6 +24,9 @@ rules:
 - apiGroups: ["hajimari.io"]
   resources: ["applications", "bookmarks"]
   verbs: ["get", "list"]
+- apiGroups: [gateway.networking.k8s.io]
+  resources: [httproutes]
+  verbs: [get, list]
 - apiGroups: ["startpunkt.ullberg.us"]
   resources: ["applications", "bookmarks"]
   verbs: ["get", "list", "create", "update", "delete"]
